remove context keyword in v2.0 version